--- a/KTPO4310.Tarasov.Lib/KTPO4310.Tarasov.Lib.csproj
+++ b/KTPO4310.Tarasov.Lib/KTPO4310.Tarasov.Lib.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Castle.Windsor" Version="5.1.1" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
   </ItemGroup>
 
